--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
   "scripts": {
     "test": "ava"
   },
+  "dependencies": {
+    "stylelint-config-standard": "^16.0.0",
+    "stylelint-config-css-modules": "^0.1.0"
+  },
   "devDependencies": {
     "ava": "^0.19.1",
-    "stylelint": "^7.2.0",
-    "stylelint-config-standard": "^16.0.0"
+    "stylelint": "^7.2.0"
   },
   "peerDependencies": {
     "stylelint": "^7.2.0"
